--- a/src/_thumbnails.scss
+++ b/src/_thumbnails.scss
@@ -91,7 +91,7 @@
 // Gradient overlay for thumbnails.
 .gradient-overlay, .gradient_overlay-hover:hover {
     pointer-events: none;
-    background: url(../images/gradient_overlay.png) bottom left repeat-x;
+    background: url(./images/gradient_overlay.png) bottom left repeat-x;
     left: 0;
     position: absolute;
     top: 0;
