--- a/src/_components.scss
+++ b/src/_components.scss
@@ -9,7 +9,7 @@
     }
     a#logo{
         @extend .d-block;
-        background: url(../images/suit_sprite.png) no-repeat 0 7px transparent;
+        background: url(./images/suit_sprite.png) no-repeat 0 7px transparent;
         width: 68px;
         height: 50px;
     }
@@ -17,7 +17,7 @@
 
 a.logo{
         @extend .d-block;
-        background: url(../images/suit_sprite.png) no-repeat 0 7px transparent;
+        background: url(./images/suit_sprite.png) no-repeat 0 7px transparent;
         width: 68px;
         height: 50px;
 }
