--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -3,8 +3,8 @@ $conv_fonts: Gibson_Bold, Gibson_BoldItalic, Gibson_Italic, Gibson_Light, Gibson
 @each $cf in $conv_fonts {
     @font-face {
         font-family: '#{$cf}';
-        src: url("../suit/styles/conv_fonts/#{$cf}.eot");
-        src: url("../suit/styles/conv_fonts/#{$cf}.eot?#iefix") format("embedded-opentype"), url("../suit/styles/conv_fonts/#{$cf}.woff") format("woff"), url("../suit/styles/conv_fonts/#{$cf}.ttf") format("truetype"), url("../suit/styles/conv_fonts/#{$cf}.svg##{$cf}") format("svg");
+        src: url("./conv_fonts/#{$cf}.eot");
+        src: url("./conv_fonts/#{$cf}.eot?#iefix") format("embedded-opentype"), url("./conv_fonts/#{$cf}.woff") format("woff"), url("./conv_fonts/#{$cf}.ttf") format("truetype"), url("./conv_fonts/#{$cf}.svg##{$cf}") format("svg");
         font-weight: normal;
         font-style: normal;
     }
