--- a/src/_loader.scss
+++ b/src/_loader.scss
@@ -11,7 +11,7 @@
 .loader{
   position: absolute;
   overflow: hidden;
-  background-image: url(../images/loading-dark.gif);
+  background-image: url(./images/loading-dark.gif);
   background-repeat: no-repeat;
   background-position: center center;
   background-color: rgba(51,51,51, 0.3);
@@ -21,17 +21,17 @@
 .loader.light{
     background-color: rgba(255,255,255, 0.3);
     filter: alpha(opacity = 30);
-    background-image: url(../images/loading-light.gif);
+    background-image: url(./images/loading-light.gif);
 }
 .loader.small{
     background-color: rgba(51,51,51, 0.3);
     filter: alpha(opacity = 30);
-    background-image: url(../images/loading-dark-small.gif);
+    background-image: url(./images/loading-dark-small.gif);
     z-index: 1;
 }
 .loader.small.light{
     background-color: rgba(255,255,255, 0.3);
     filter: alpha(opacity = 30);
-    background-image: url(../images/loading-light-small.gif);
+    background-image: url(./images/loading-light-small.gif);
     z-index: 1;
 }
