--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -36,7 +36,7 @@
                         left: 50%;
                         bottom: 0px;
                         margin-left: -7px;
-                        background-image: url(../images/suit_sprite.png);
+                        background-image: url(./images/suit_sprite.png);
                         background-position: -68px 0px;
                     }
                 }
@@ -88,7 +88,7 @@
                         right: 0;
                         top: 50%;
                         margin-top: -7px;
-                        background-image: url(../images/suit_sprite.png);
+                        background-image: url(./images/suit_sprite.png);
                         background-position: -68px -7px;
                     }
                 }
@@ -119,7 +119,7 @@
                     left: 50%;
                     bottom: -1px;
                     margin-left: -6px;
-                    background-image: url(../images/suit_sprite.png);
+                    background-image: url(./images/suit_sprite.png);
                     background-position: -82px 0px;
                 }
             }
