--- a/src/_icons.scss
+++ b/src/_icons.scss
@@ -5,7 +5,8 @@
 // WE WILL BE USING "H6" FOR OUR ICON FONTS.
 @font-face {
     font-family: "suit-icons";
-    src: url(set-icons4.ttf);
+    src: url("./fonts/set-icons4.eot");
+    src: url("./fonts/set-icons4.eot?#iefix") format("embedded-opentype"), url("./fonts/set-icons4.woff") format("woff"), url("./fonts/set-icons4.ttf") format("truetype"), url("./fonts/set-icons4.svg#set-icons4") format("svg");
 }
 .font-icon{
 	font-family:"suit-icons";
