--- a/src/suit.scss
+++ b/src/suit.scss
@@ -1,6 +1,7 @@
 @import "reset";
 @import "colors";
 @import "box_model";
+@import "font_gibson";
 @import "fonts";
 @import "blur";
 @import "shadows";
