--- a/src/_box_model.scss
+++ b/src/_box_model.scss
@@ -28,28 +28,6 @@
 .p-absolute{ position: absolute; }
 .p-fixed{ position: fixed; }
 
-///////////////////////
-//  TOP and LEFT //////
-///////////////////////
-$sizes: 7 10 15 20 25 30 40 60 80 100;
-@each $size in $sizes {
-    .top-#{$size}{top:#{$size}px;}
-    .left-#{$size}{left:#{$size}px;}
-    .right-#{$size}{right:#{$size}px;}
-    .bottom-#{$size}{bottom:#{$size}px;}
-}
-
-//////////////////////////////////
-/////Width and Height 100% ///////
-/////////////////////////////////
-.width-100-per{
-    width: 100%;
-}
-
-.height-100-per{
-    height: 100%;
-}
-
 ///////////////
 // OVERFLOWS //
 ///////////////
@@ -57,12 +35,20 @@ $sizes: 7 10 15 20 25 30 40 60 80 100;
 .of-hidden { overflow: hidden; }
 .of-auto { overflow: auto; }
 
+///////////////////
+// MARGIN RESETS //
+///////////////////
+.m-reset{ margin: 0; }
+.mt-reset { margin-top: 0; }
+.mr-reset { margin-right: 0; }
+.mb-reset { margin-bottom: 0; }
+.ml-reset { margin-left: 0; }
+
 /////////////
 // MARGINS //
 /////////////
-.m-reset{ margin: 0;}
 .m-auto, .m-auto{ margin: 0 auto; }
-$margins: 5 7 10 15 20 30 40 65 80 134;
+$margins: 5 7 10 15 20 30 40 80;
 @each $margin in $margins {
     .m-#{$margin}{margin:#{$margin}px;}
     .mt-#{$margin}{margin-top:#{$margin}px;}
@@ -70,22 +56,19 @@ $margins: 5 7 10 15 20 30 40 65 80 134;
     .mb-#{$margin}{margin-bottom:#{$margin}px;}
     .ml-#{$margin}{margin-left:#{$margin}px;}
 }
-///////////////////
-// MARGIN RESETS //
-///////////////////
-.mt-reset { margin-top: 0; }
-.mr-reset { margin-right: 0; }
-.mb-reset { margin-bottom: 0; }
-.ml-reset { margin-left: 0; }
 
-//////////////
-// PADDINGS //
-//////////////
+/////////////////////
+// PADDINGS RESETS //
+/////////////////////
 .p-reset{ padding: 0;}
 .pt-reset{ padding-top: 0;}
 .pr-reset{ padding-right: 0;}
 .pb-reset{ padding-bottom: 0;}
 .pl-reset{ padding-left: 0;}
+
+//////////////
+// PADDINGS //
+//////////////
 $paddings:  5 7 10 15 20 30 40 65 80 134;
 @each $padding in $paddings {
     .p-#{$padding}{padding:#{$padding}px;}
