--- a/src/_components.scss
+++ b/src/_components.scss
@@ -1,5 +1,5 @@
 .headers-layout{
-    @extend .bgc-darkest-grey;
+    background-color: $darkest-grey;
     height: 50px;
     line-height: 50px;
     width: 100%;
@@ -8,7 +8,7 @@
         width: 1040px;
     }
     a#logo{
-        @extend .d-block;
+        display: block;
         background: url(./images/suit_sprite.png) no-repeat 0 7px transparent;
         width: 68px;
         height: 50px;
@@ -16,26 +16,26 @@
 }
 
 a.logo{
-        @extend .d-block;
-        background: url(./images/suit_sprite.png) no-repeat 0 7px transparent;
-        width: 68px;
-        height: 50px;
+    display: block;
+    background: url(./images/suit_sprite.png) no-repeat 0 7px transparent;
+    width: 68px;
+    height: 50px;
 }
 
 .title-box, .footer-box{
-    @extend .m-auto;
-    @extend .mt-20;
-    @extend .bgc-lightest-grey;
+    margin: 0 auto;
+    margin-top: 20px;
+    background-color: $lightest-grey;
     padding: 8px 30px;
     width: 980px;
     h4{
-        @extend .d-inline-block;
+        display: inline-block;
         line-height: 34px;
     }
 }
 
 .title-box{
-    @extend .bb-light-grey;
+    @include border($light-grey, 'bottom');
     line-height: 34px;
 
     h4 {
@@ -60,23 +60,23 @@ a.logo{
 }
 
 .footer-box{
-    @extend .bt-light-grey;
+    @include border($light-grey, 'top');
 }
 
 .content-box{
-    @extend .m-auto;
-    @extend .p-15;
-    @extend .bgc-white;
-    @extend .of-visible;
-    @extend .p-relative;
+    margin: 0 auto;
+    padding: 15px;
+    background-color: $white;
+    overflow: visible;
+    position: relative;
     display: table;
     width: 1010px;
 }
 
 .invisible-container{
     width: 1060px;
-    @extend .m-auto;
-    @extend .of-hidden;
+    margin: 0 auto;
+    overflow: hidden;
 }
 
 .full-width-content-box{
@@ -96,7 +96,7 @@ a.logo{
     }
 
     h4 {
-        @extend .fc-dark-grey;
+        color: $dark-grey;
     }
 }
 
@@ -130,26 +130,26 @@ hr.divider-line {
 /////////////////
 // BREADCRUMBS //
 /////////////////
-.suit-breadcrumbs {
+.suit-breadcrumbs, .breadcrumbs {
     @extend .title-box;
-    @extend .p-relative;
+    position: relative;
     padding: 0 30px;
 
     > ul {
         list-style: none;
-        @extend .fc-dark-grey;
+        color: $dark-grey;
         height: 50px;
         line-height: 50px;
 
         > li{
-            @extend .p-relative;
-            @extend .f-left;
+            position: relative;
+            float: left;
             height: 50px;
             line-height: 50px;
             max-width: 221px;
 
             > a:not(.btn-icon-blue){
-                @extend .d-block;
+                display: block;
                 @extend .truncate;
                 height: 50px;
             }
@@ -162,7 +162,7 @@ hr.divider-line {
 
                 // Active items
                 > a.active.section-#{$key} {
-                    @extend .fc-darkest-grey;
+                    color: $darkest-grey;
                     span {
                         @extend .fc-#{$key};
                     }
@@ -177,9 +177,9 @@ hr.divider-line {
 
             &:hover{
                 > ul{
-                    @extend .d-block;
-                    @extend .bgc-white;
-                    @extend .p-absolute;
+                    display: block;
+                    background-color: $white;
+                    position: absolute;
                     white-space: nowrap;
                     top: 50px;
                     padding: 15px 0;
@@ -192,35 +192,36 @@ hr.divider-line {
                         height: 50px;
                     }
                     a {
-                        @extend .d-block;
-                        @extend .pl-30;
-                        @extend .pr-30;
-                        @extend .fc-darkest-grey;
-                        @extend .truncate;
+                        display: block;
+                        padding-left: 30px;
+                        padding-right: 30px;
+                        color: $darkest-grey;
+                        @include truncate();
                     }
                 }
 
                 @each $color in $colors {
                     $key: nth($color, 1);
+                    $value: nth($color, 2);
                     $r: nth($color, 3);
                     $g: nth($color, 4);
                     $b: nth($color, 5);
 
                     // Regular menu items
                     > a.section-#{$key} {
-                        @extend .fc-darkest-grey;
+                        color: $darkest-grey;
                         span {
-                            @extend .fc-#{$key};
+                            color: $value;
                         }
                     }
 
                     // Dropdown menu items
                     &.dropdown-menu-#{$key} {
                         > a.section-#{$key} {
-                            @extend .bgc-#{$key};
-                            @extend .fc-white;
+                            background-color: $value;
+                            color: $white;
                             span {
-                                @extend .fc-white;
+                                color: $white;
                             }
                         }
                         >ul {
@@ -235,14 +236,14 @@ hr.divider-line {
         }
 
         li{
-            @extend .d-block;
+            display: block;
             list-style: none;
 
             a{
-                @extend .d-inline-block;
-                @extend .td-none;
-                @extend .p-relative;
-                @extend .tt-capitalize;
+                display: inline-block;
+                text-decoration: none;
+                position: relative;
+                text-transform: capitalize;
             }
 
             a.btn-icon-blue {
@@ -256,23 +257,20 @@ hr.divider-line {
 // TOOLTIPS //
 //////////////
 .tooltip {
-    @extend .p-absolute;
-    @extend .d-none;
+    position: absolute;
+    display: none;
     padding: 5px 0;
     z-index: 9999; // so its on top of the modals as well
     max-width: 500px;
 }
 .tooltip-content {
-    @extend .ta-left;
-    @extend .bgc-red;
-    @extend .fc-white;
-    @extend .pt-7;
-    @extend .pb-7;
-    @extend .pl-15;
-    @extend .pr-15;
+    text-align: left;
+    background-color: $red;
+    color: $white;
+    padding: 7px 15px;
 }
 .tooltip-arrow {
-    @extend .p-absolute;
+    position: absolute;
     width: 0;
     height: 0;
     border-color: transparent;
