--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -3,30 +3,30 @@
 /////////////////
 
 .date-picker{
-    @extend .p-relative;
+    position: relative;
 
     &:hover, &:focus{
         .date-picker-trigger{
-            @extend .b-darkest-grey;
-            @extend .fc-darkest-grey;
+            @include border($darkest-grey);
+            color: $darkest-grey;
         }
     }
 
     &.error, &.error:focus {
         .date-picker-trigger{
-            @extend .b-red;
-            @extend .fc-red;
+            @include border($red);
+            color: $red;
         }
     }
 
     .date-picker-trigger{
-        @extend .d-block;
-        @extend .bgc-white;
-        @extend .td-none;
-        @extend .fc-medium-grey;
-        @extend .b-medium-grey;
-        @extend .ta-center;
-        @extend .p-absolute;
+        display: block;
+        background-color: $white;
+        display: none;
+        color: $medium-grey;
+        @include border($medium-grey);
+        text-align: center;
+        position: absolute;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
@@ -39,9 +39,9 @@
         width: 34px;
 
         &.disabled {
-            @extend .bgc-lightest-grey;
-            @extend .fc-medium-grey;
-            @extend .b-light-grey;
+            background-color: $lightest-grey;
+            color: $medium-grey;
+            @include border($light-grey);
         }
     }
 
@@ -55,19 +55,19 @@
 
         &.#{$key}.active {
             .date-picker-trigger {
-                @extend .bgc-#{$key};
-                @extend .fc-white;
-                @extend .b-light-grey;
+                background-color: $value;
+                color: $white;
+                @include border($light-grey);
             }
 
             .date-picker-date {
-                @extend .b-light-grey;
+                @include border($light-grey);
             }
         }
 
         &.error {
             .date-picker-date {
-                @extend .b-red;
+                @include border($red);
             }
         }
     }
@@ -82,36 +82,36 @@
         $b: nth($color, 5);
 
         &.#{$key} {
-            @extend .p-reset;
-            @extend .b-light-grey;
+            padding: 0;
+            @include border($light-grey);
             @include box-shadow;
 
             margin: -1px 0;
 
             .pika-title {
-                @extend .bgc-#{$key};
+                background-color: $value;
 
                 .pika-label {
-                    @extend .bgc-#{$key};
-                    @extend .fc-white;
+                    background-color: $value;
+                    color: $white;
                 }
             }
 
             .pika-table {
                 th {
-                    @extend .fc-medium-grey;
-                    @extend .bgc-lightest-grey;
-                    @extend .bb-light-grey;
-                    @extend .font-default;
+                    color: $medium-grey;
+                    background-color: $lightest-grey;
+                    @include border($light-grey, 'bottom');
+                    @include border($light-grey);
                 }
                 td{
-                    @extend .va-top;
+                    vertical-align: top;
                 }
             }
 
             .pika-prev, .pika-next {
-                @extend .fc-white;
-                @extend .bg-none;
+                color: $white;
+                background: none;
                 text-indent: 0;
                 font-family: "suit-icons";
                 opacity: 1;
@@ -123,11 +123,11 @@
             }
 
             .is-today .pika-button {
-                @extend .fc-#{$key};
+                color: $value;
             }
 
             .is-selected .pika-button {
-                @extend .bgc-#{$key};
+                background-color: $value;
                 color: $white !important;
                 border-radius: 0;
                 box-shadow: none;
@@ -149,38 +149,38 @@
 /////////////////
 
 .time-picker{
-    @extend .p-relative;
+    position: relative;
 
     &:hover, &:focus{
         .time-picker-trigger{
-            @extend .b-darkest-grey;
-            @extend .fc-darkest-grey;
+            @include border($darkest-grey);
+            color: $darkest-grey;
         }
     }
 
     &.disabled:hover {
         .time-picker-trigger{
-            @extend .bgc-lightest-grey;
-            @extend .fc-medium-grey;
-            @extend .b-light-grey;
+            background-color: $lightest-grey;
+            color: $medium-grey;
+            @include border($light-grey);
         }
     }
 
     &.error, &.error:focus {
         .time-picker-trigger{
-            @extend .b-red;
-            @extend .fc-red;
+            @include border($red);
+            color: $red;
         }
     }
 
     .time-picker-trigger{
-        @extend .d-block;
-        @extend .bgc-white;
-        @extend .td-none;
-        @extend .fc-medium-grey;
-        @extend .b-medium-grey;
-        @extend .ta-center;
-        @extend .p-absolute;
+        display: block;
+        background-color: $white;
+        display: none;
+        color: $medium-grey;
+        @include border($medium-grey);
+        text-align: center;
+        position: absolute;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
@@ -193,9 +193,9 @@
         width: 34px;
 
         &.disabled {
-            @extend .bgc-lightest-grey;
-            @extend .fc-medium-grey;
-            @extend .b-light-grey;
+            background-color: $lightest-grey;
+            color: $medium-grey;
+            @include border($light-grey);
         }
     }
 
@@ -209,19 +209,19 @@
 
         &.#{$key}.active {
             .time-picker-trigger {
-                @extend .bgc-#{$key};
-                @extend .fc-white;
-                @extend .b-light-grey;
+                background-color: $value;
+                color: $white;
+                @include border($light-grey);
             }
 
             .time-picker-time {
-                @extend .b-light-grey;
+                @include border($light-grey);
             }
         }
 
         &.#{$key}.error {
             .time-picker-time {
-                @extend .b-red;
+                @include border($red);
             }
         }
     }
@@ -237,7 +237,7 @@
         $g: nth($color, 4);
         $b: nth($color, 5);
 
-        @extend .bgc-white;
+        background-color: $white;
         @include box-shadow;
 
         overflow-y: auto;
@@ -251,16 +251,15 @@
                 list-style: none;
 
                 > li {
-                    @extend .p-10;
-                    @extend .fc-darkest-grey;
+                    color: $darkest-grey;
 
                     &:hover, &.ui-timepicker-selected {
-                        @extend .bgc-#{$key};
-                        @extend .fc-white;
+                        background-color: $value;
+                        color: $white;
                     }
 
                     &.ui-timepicker-selected {
-                        @extend .fst-bold;
+                        @include font-gibson(bold);
                     }
                 }
             }
