--- a/src/_modals.scss
+++ b/src/_modals.scss
@@ -2,21 +2,19 @@
 // MODALS //
 ////////////
 .suit-modal-overlay{
-    //@extend .bgc-dark-grey;
-    @extend .p-fixed;
-    @extend .of-auto;
+    position: fixed;
+    overflow: auto;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    //opacity: 0;//.2;
     background-color: transparent;
     z-index: 1000;
 }
 
 .suit-modal{
-    @extend .p-absolute;
-    @extend .bgc-white;
+    position: absolute;
+    background-color: $white;
     z-index: 1001;
     -moz-box-shadow: 0px 12px 40px 0px rgba(0, 0, 0, 0.6);
     -webkit-box-shadow: 0px 12px 40px 0px rgba(0, 0, 0, 0.6);
