--- a/src/_grids.scss
+++ b/src/_grids.scss
@@ -8,55 +8,56 @@
 
 .content-box{
     .grid1, .grid2, .grid3, .grid4, .grid6{
+        box-sizing: border-box;
         padding: 15px;
     }
 
     .grid1{
-        width: 980px;
+        width: 1010px;
     }
     .grid2{
-        width: 475px;
+        width: 505px;
         &.span2{
-            width: 980px;
+            width: 1010px;
         }
     }
     .grid3{
-        width: 306px;
+        width: 336px;
         &.span2{
-            width: 642px
+            width: 672px;
         }
         &.span3{
-            width: 980px
+            width: 1010px;
         }
     }
     .grid4{
-        width: 222px;
+        width: 252px;
         &.span2{
-            width: 474px
+            width: 304px;
         }
         &.span3{
-            width: 726px
+            width: 756px;
         }
         &.span4{
-            width: 980px
+            width: 1010px;
         }
     }
     .grid6{
-        width: 138px;
+        width: 168px;
         &.span2{
-            width: 306px
+            width: 336px
         }
         &.span3{
-            width: 474px
+            width: 504px
         }
         &.span4{
-            width: 642px
+            width: 672px
         }
         &.span5{
-            width: 810px
+            width: 840px
         }
         &.span6{
-            width: 980px
+            width: 1010px;
         }
     }
 }
@@ -175,9 +176,7 @@
 /////////////////////////////
 .grid1, .grid2, .grid3, .grid4, .grid6{
     .title-box, .content-box, .footer-box{
-        //margin: 0;
         width: 100%;
-        //height: 50px;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         -webkit-box-sizing: border-box;
