--- a/src/_thumbnails.scss
+++ b/src/_thumbnails.scss
@@ -28,7 +28,7 @@
         @include font-gibson(bold);
         letter-spacing: 0.1em;
         right: 0;
-        width: 65px;;
+        width: 65px;
      }
     .gradient-overlay, .slider, .thumbnail-duration {
         opacity: 0;
